A few spelling fixes, plus nerfing a 50% consumer goods modifier

--- a/localisation/KR_Ethiopia_l_english.yml
+++ b/localisation/KR_Ethiopia_l_english.yml
@@ -51,7 +51,7 @@ ETH_Mecha_desc:0 "We have reformed agriculture, but many farmers still use out o
 ETH_Enc_Sci:0 "Encourage Science"
 ETH_Enc_Sci_desc:0 "Now we have modernised both agriculture and production, we must be able further advance our economy through scientific invention!"
 ETH_End_BM:0 "The End of the Reforms"
-ETH_End_BM_desc:0 "The reforms of Haile Selassie are at an end, and have propelled the country out of the grasps of collapse into the warm embrance of prosperity."
+ETH_End_BM_desc:0 "The reforms of Haile Selassie are at an end, and have propelled the country out of the grasps of collapse into the warm embrace of prosperity."
 ETH_Euro_Invest:0 "European Investment"
 ETH_Euro_Invest_desc:0 "We have proven ourselves to be worthy of European investment. Hopefully this will help us in a multitude of ways!"
 ETH_Euro_Fac:0 "European Factories"
