--- a/localisation/KR_Sweden_l_english.yml
+++ b/localisation/KR_Sweden_l_english.yml
@@ -178,7 +178,7 @@ SWE_lottorna11:0 "Lottakåren"
 SWE_lottorna11_desc:0 "Lottorna now stand able and ready to serve the Swedish state and army in the best way. For now, these duties include assisting our medical staff, cooking and preparing food, repairing clothes and tasks of that nature."
 SWE_lottorna_aux1:0 "Auxiliary Lottakår"
 SWE_lottorna_aux1_desc:0 "Lottorna now stand able and ready to serve the Swedish state and army in the best way. With their auxiliary duties expanded upon, they hold many non-combat positions in our army, working in areas such as transport, the signal corps, non-combat engineers and in administration."
-SWE_lottorna_mil1:0 "Militarized Lottakår"
+SWE_lottorna_mil1:0 "Militarised Lottakår"
 SWE_lottorna_mil1_desc:0 "Lottorna now stand able and ready to serve the Swedish state and army in the best way. With a full militarisation Lottakåren has more or less been fully integrated into the army and several of our units are gender-mixed. There are a couple air-force female-only brigades, however, called Valkyriorna."
 
 SWE_air_production:0 "Swedish Fighter Investments"
@@ -213,7 +213,7 @@ SWE_SENREF_RADICAL_desc:0 "It is time to end this outdated form of institutional
 SWE_SENREF_RADICAL1:0 "The Economic Revolution"
 SWE_SENREF_RADICAL1_desc:0 "We have been talking about it for a long time, but today is the day when we seize the means of production away from the oligarchs and aristocrats and give it to the workers. The only question is, how will we do this?"
 SWE_SENREF_RADICAL1_tooltip:0 "§GYou will set the economic agenda of the new government.§! \n"
-SWE_SENREF_RADICAL2:0 "An Egalitarian Sociaty"
+SWE_SENREF_RADICAL2:0 "An Egalitarian Society"
 SWE_SENREF_RADICAL2_desc:0 "We must overhaul the bureaucracy of the country, make new laws and amend existing ones. Our people will be reborn, although our government is plagued with disagreements..."
 SWE_SENREF_RADICAL2_tooltip:0 "§GYou will set the social agenda of the new government.§! \n"
 SWE_SENREF_RADICAL3:0 "Purge the Army"
@@ -433,8 +433,8 @@ SWE_LABORDIV:0 "Work Brigades"
 SWE_LABORDIV_desc:0 "There's no gaurantee that a person of a certain age-group has it in them to be a soldier. It is wasted manpower to just send them on their way though. We should establish civilian work brigades that focus on erecting military installations."
 SWE_DEFENSE:0 "Defensive Armies"
 SWE_DEFENSE_desc:0 "Sweden's armies should, first and foremost, be used to protect Swedish sovereign soil. Our units should prepare more exercises focusing on the 'What-if's of a foreign invasion."
-SWE_HEMVARN:0 "Organize Hemvärnet"
-SWE_HEMVARN_desc:0 "Olof Thörnell has hired a man he trusts, Gustaf Petri, to help establish a more effective variant of Landstormen. With proper investments, a new army called Hemvärnet (Home guard) can be raised. This will increase our manpower, without reduing troop quality!"
+SWE_HEMVARN:0 "Organise Hemvärnet"
+SWE_HEMVARN_desc:0 "Olof Thörnell has hired a man he trusts, Gustaf Petri, to help establish a more effective variant of Landstormen. With proper investments, a new army called Hemvärnet (Home guard) can be raised. This will increase our manpower, without reducing troop quality!"
 SWE_BERGJAGARE:0 "Bergsjägarna"
 SWE_BERGJAGARE_desc:0 "Bergsjägarna will be our elite mountaineer unit, or so Oscar Nygren envisions it at least. They'll serve a critical role in defending our northern and western borders against any unwanted aggression."
 SWE_HEMVARN2:0 "Modern weapons"
@@ -462,7 +462,7 @@ SWE_LOTTOR1:0 "Expand Lottakåren"
 SWE_LOTTOR1_desc:0 "Lottakåren used to be the women's wing of Landstormen, and in wartime they can serve with some civilian services, such as repairing and sewing clothes, handing out food and more. If we expand upon this idea, it can boost our military efficiency."
 SWE_LOTTORAUX:0 "Permanent the Auxiliary Service"
 SWE_LOTTORAUX_desc:0 "Lottorna is doing us a good service but we could permanent a greater auxiliary service, such as enemy bomber spotting for the air defences and for other non-combatant positions."
-SWE_LOTTORMIL:0 "Militarize Lottorna"
+SWE_LOTTORMIL:0 "Militarise Lottorna"
 SWE_LOTTORMIL_desc:0 "Many of the young women of Lottorna has proved themselves capable in their weapons training. To fully integrate them in the army and the air force would allow us to recruit a larger army, but some of the more conservative minded people might object."
 
 SWE_NORDIPLO:0 "Scandinavian Diplomacy"
@@ -542,8 +542,8 @@ politics_axel_pehrsson_desc:0 "Axel Pehrsson-Bramstorp is a Swedish politician a
 politics_bertil_ohlin_desc:0 "Bertil Ohlin is a professor of economics and a Swedish politician, strongly influenced by his liberal and pro-Scandinavian-unity mother."
 politics_gosta_bagge_desc:0 "Gösta Bagge is a professor of economics and a Swedish right-wing politician."
 
-politics_karl_kilblom_desc:0 "Karl Kilbom was born in 1885 in the Uppland region. His father was a smith who, when he tried to form a union, recieved threats from his employer and told Karl to stay out of politics. When he eventually moved away from his father (the mother passed away when he was young) he found a job as a sailor before eventually being drafted and serving at the ship HMS Svea in 1907. \n\nAfter his military service he moved to Göteborg, where he met big names in the left movement. Soon enough Kilbom started doing journalistic work for various political newspapers and became a big name in the far left movement of Sweden. Despite various splits and inner conflicts Kilbom has managed to stay close to power."
-politics_karin_boye_desc:0 "Karin Boye was born in October 1900. Both her parents came from well-off families who supplied Karin Boye with high quality studies, studies which she performed very well in. She finished her studies to become a teacher, but is much more famous for her poetry and writing. She strongly identifies with the socialist and feminist movements of Sweden and in 1927 she becomes an editor at a socialist newspaper. \n\nShe visited Germany (she had German ancestry in her family) and lives in Berlin from 1932 to 1933, where she confronts her sexuality and starts living more or less openly with another woman, Margot Hanel, a German Jewish woman. The two of them return to Sweden, where Boye continues to develop her interest in politics and poetry. \n\nThanks to her popularity she managed to avoid legal confrontration regarding her sexual deviancy, and during the election of 1936, when the Syndicalists snatched a surprise victory, she used her fame and skill with words to win a high position in the movement."
+politics_karl_kilblom_desc:0 "Karl Kilbom was born in 1885 in the Uppland region. His father was a smith who, when he tried to form a union, received threats from his employer and told Karl to stay out of politics. When he eventually moved away from his father (the mother passed away when he was young) he found a job as a sailor before eventually being drafted and serving at the ship HMS Svea in 1907. \n\nAfter his military service he moved to Göteborg, where he met big names in the left movement. Soon enough Kilbom started doing journalistic work for various political newspapers and became a big name in the far left movement of Sweden. Despite various splits and inner conflicts Kilbom has managed to stay close to power."
+politics_karin_boye_desc:0 "Karin Boye was born in October 1900. Both her parents came from well-off families who supplied Karin Boye with high quality studies, studies which she performed very well in. She finished her studies to become a teacher, but is much more famous for her poetry and writing. She strongly identifies with the socialist and feminist movements of Sweden and in 1927 she becomes an editor at a socialist newspaper. \n\nShe visited Germany (she had German ancestry in her family) and lives in Berlin from 1932 to 1933, where she confronts her sexuality and starts living more or less openly with another woman, Margot Hanel, a German Jewish woman. The two of them return to Sweden, where Boye continues to develop her interest in politics and poetry. \n\nThanks to her popularity she managed to avoid legal confrontation regarding her sexual deviancy, and during the election of 1936, when the Syndicalists snatched a surprise victory, she used her fame and skill with words to win a high position in the movement."
 politics_elise_jensen_desc:0 "Elise Ottesen-Jensen, called Ottar, was born in 1886 in then Swedish Norway. She was the seventeenth of eighteen children in between a priest and a bishop's daughter. Her relations with her family became very strained when she refused Christianity and God in her early teenage years and, unlike many of her siblings, looked for a career outside of the church. \n\nInstead, she became a dentist's assistant, although an accident costing her two of her fingers ended that career quickly. Instead, she became a stenographer and wrote articles for various syndicalist and socialist papers until she met Albert Jensen, her future husband. They eventually married and moved to Copenhagen and later Stockholm. \n\nShe started a Women's newspaper and acted as a sort of sexual educator and agitator of women's rights, recognising the many struggles of the Scandinavian working class woman, with poverty, responsibility for the children, running double jobs and abusive marriages. Eventually she started touring the country, holding gatherings and sex ed evening classes all around the country. In these she turned out to be a skilled agitator."
 politics_albert_jensen_desc:0 "Albert Jensen was born in 1879 in Landskrona in a very poor family. His father died when he was only seven, and with many siblings to care for the household lived through cold winters and hungry summers. As a eighteen year old he formed a Socialist Youth organisation and ended up in prison for a total of two years in between 1906-1910, for various illegal political demonstrations. \n\nAfterwards he moved to France to study the syndicalist movements there and turned out to be such a strong personality that he ended up representing SAC (the Syndicalist party of Sweden) at the 1913 Syndicalist meeting in London. With the start of the Weltkrieg, the states of Europe were harsher with political dissidents and Albert had to live underground for some time, with a false name, while still producing articles and pamphlets for various syndicalist causes. \n\nAfter meeting his wife-to-be the two of them moved around Sweden, holding public speeches and producing articles on various revolutionary topics. Much like his wife, Albert is a very skilled demagogue."
 politics_sven_linderot_desc:0 "Sven Linderot was born in 1889. Already at eleven years of age he would start working in a local glass-works where he worked for another twelve years. At first he was politically engaged in the Social Democratic party, but was purged for his radical viewpoints in 1916. He was an active unionist and eventually journalist and politician. \n\nHe has for a long time promoted a hard-line type of centralism which most moderate syndicalists feel nothing but contempt for, but he is a hard-worker and as an editor-in-chief of a large Socialist newspaper Norrskensflamman, he has managed to win a devoted crowd."
@@ -668,7 +668,7 @@ swe.74.d:0 "The Germans have been our trading partners and friends ever since th
 swe.74.a:0 "The Kaiser and the King, as comrades in arms!"
 
 swe.75.t:0 "The Åland negotiations"
-swe.75.d:0 "The Åland isles are as Swedish as Stockholm, and still they are controlled but the Finnish. However, where the sword failed, the pen might succeed. Now that we are on better terms with Finland, we might be able to offer them a lucurative deal for an Åland purchase. Naturally, we'll guarantee that the mainland Finnish provinces remain Finnish."
+swe.75.d:0 "The Åland isles are as Swedish as Stockholm, and still they are controlled but the Finnish. However, where the sword failed, the pen might succeed. Now that we are on better terms with Finland, we might be able to offer them a lucrative deal for an Åland purchase. Naturally, we'll guarantee that the mainland Finnish provinces remain Finnish."
 swe.75.a:0 "Åland, return to us!"
 
 swe.76.t:0 "The Åland negotiations succeeded!"
@@ -930,7 +930,7 @@ swe.19.d:0 "For several months the strike has been going on, hurting our economy
 swe.19.a:0 "Thank Goodness!"
 
 swe.20.t:0 "Funeral of Gösta Ekman"
-swe.20.d:0 "The legend of Gösta Ekman, Sweden's most popular actor and theatre-director, passed away at age 47 after a period of sickness. In the last eleven years, Ekman was part of no less than twenty three productions. Following his funeral train in the streets of Stockholm, over 100 000 (!) people, roughly a fifth of the city, watched the coffin pass and mourned the end of a Swedish legend."
+swe.20.d:0 "The legend of Gösta Ekman, Sweden's most popular actor and theatre-director, passed away at age 47 after a period of sickness. In the last eleven years, Ekman was part of no less than twenty three productions. Following his funeral train in the streets of Stockholm, over 100 000 people, roughly a fifth of the city, watched the coffin pass and mourned the end of a Swedish legend."
 swe.20.a:0 "We all mourn today."
 
 swe.21.t:0 "Astrid Kindstrand on the radio"
