Tiny fix for over following text

--- a/localisation/KR_Loading_Tips_l_english.yml
+++ b/localisation/KR_Loading_Tips_l_english.yml
@@ -66,7 +66,7 @@ LOADING_TIP_63:0 "A Whig is a man who is prepared to go to the stake for his bel
 LOADING_TIP_64:0 "We understand, as we have never understood before, that our Empire is a mystic whole which no enemy may part asunder. \n- Sir John Buchan"
 LOADING_TIP_65:0 "No great cause is ever lost or won: the battle must always be renewed, and the creed must always be restated. \n- Sir John Buchan"
 LOADING_TIP_66:0 "How can you have a one-party state in a country which has two hundred and forty-six varieties of cheese? \n- Charles de Gaulle, on the Commune of France"
-LOADING_TIP_67:0 "I don`t like you, and you don`t like me, but now we are in the same boat and everything should be done to save Russia \n- Lavr Kornilov to Boris Savinkov 1936"
+LOADING_TIP_67:0 "I don't like you, and you don't like me, but now we are in the same boat and everything should be done to save Russia \n- Lavr Kornilov to Boris Savinkov 1936"
 LOADING_TIP_68:0 "The reactionary stands firm before the glaring lamp of progress, and here in the shadow he casts we find the distinction of states, and the origin of identity itself. \n- Rev. Daniel Garrity"
 LOADING_TIP_69:0 "Do you think love can bloom even on a battlefield? \n- Dr. Hal Emmerich"
 LOADING_TIP_70:0 "Blessed are the meek: for they shall inherit the earth. \n- Matthew 5:5, King James Bible"
