--- a/localisation/KR_Romania_l_english.yml
+++ b/localisation/KR_Romania_l_english.yml
@@ -454,7 +454,7 @@ romania.45.tt1:0 "the people vote for union with Romania."
 romania.45.tt2:0 "the people vote to remain part of Bulgaria."
 
 romania.46.t:0 "Bulgaria refused the plebiscite!"
-romania.46.d:0 "The Bulgarian government doesn`t want to give the people a chance to choose their destiny! What will we do?"
+romania.46.d:0 "The Bulgarian government doesn't want to give the people a chance to choose their destiny! What will we do?"
 romania.46.a:0 "Send the army!"
 romania.46.b:0 "We can't do anything at the moment."
 
