--- a/localisation/KR_Transamur_l_english.yml
+++ b/localisation/KR_Transamur_l_english.yml
@@ -330,14 +330,14 @@ tram.85.b:0 "Never!"
 
 tram.86.t:0 "The Duma Elections"
 tram.86.d:0 "After several months of preparations the provisional government has completed the arrangements for the first free election in Transamur since 1920. There are 90 seats in national assembly available and various political parties have begun their campaigns. Currently only three parties have a chance of gaining a majority, thus forming a new government. Which one shall prevail?"
-tram.86.a:0 "The People`s Far East Party!"
+tram.86.a:0 "The People's Far East Party!"
 tram.86.b:0 "The Party of Popular Freedom!"
 tram.86.c:0 "The The Zemski Krai Party!"
 tram.86.e:0 "The army shall put an end to this chaotic democracy!"
 
 tram.87.t:0 "The Duma Elections"
 tram.87.d:0 "According to the Constitution elections are to be held every four years. The state Duma's term has expired and the time has come to elect a new parliament. There are 90 seats in the Duma available and various political parties have begun their campaigns. Only three parties have a chance of gaining the majority, thus forming a new government. Which one shall prevail?"
-tram.87.a:0 "The People`s Far East Party!"
+tram.87.a:0 "The People's Far East Party!"
 tram.87.b:0 "The Party of Popular Freedom!"
 tram.87.c:0 "The The Zemski Krai Party!"
 tram.87.e:0 "The army shall put an end to this chaotic democracy!"
