--- a/localisation/KR_Ukraine_l_english.yml
+++ b/localisation/KR_Ukraine_l_english.yml
@@ -120,7 +120,7 @@ ukraine.1.d:0 "The Kingdom of Ukraine proclaimed its independence with the help 
 ukraine.1.a:0 "Fascinating."
 ukraine.2.t:0 "The Ukrainian Government"
 ukraine.2.d:0 "Even our government is divided and Pavel Skoropadsky does his best to solve the antagonisms between the army, which consists in general of the former officers of the Russian Imperial Army and other Ukrainian ministers, who support our current position in Mitteleuropa. All these problems can only be solved when the majority of our population - the farmers and peasants - have an opportunity to sell their agricultural products in Europe."
-ukraine.2.a:0 "Don`t provoke the peasants."
+ukraine.2.a:0 "Don't provoke the peasants."
 ukraine.3.t:0 "Black Monday Hits Ukraine!"
 ukraine.3.d:0 "Almost two weeks ago, the Berlin Stock Exchange plunged into bottomless depths, throwing Germany's economy into an unprecedented crisis. Now the crash's shock waves have reached the Ukraine. German and Austrian-owned companies have closed down or laid-off their workers, the Ukrainian Hrivna is losing value, and resource exports are shrinking..."
 ukraine.3.a:0 "Let's hope the government will save us from the worst..."
@@ -134,7 +134,7 @@ ukraine.6.t:0 "Ivan Chernyakhovsky returns from Africa"
 ukraine.6.d:0 "Ivan Chernyakhovsky, a young and talented officer, returns to Ukraine. He was a member of the voluntary Ukrainian division, which helped our German allies in Mittelafrika. His books 'On the Banks of the Congo' and 'Safari' made him the most popular Ukrainian soldier and writer in the entire country. Chernyakhovsky was promoted to the rank of Colonel and will soon become the commander of the 1st Cossack division ('Serdyutskaya' division), which belongs to the elite of the Ukrainian army."
 ukraine.6.a:0 "Welcome home!"
 ukraine.7.t:0 "Dmitri Dontsov Deported From Galicia-Lodomeria"
-ukraine.7.d:0 "Dmitri Dontsov, an ideologist of Ukrainian nationalism has been deported from Galicia, where he had urged the Ukrainians to fight against the pro-Polish government. Now he claims that the crisis exposed the weakness of our government and that`s why Ukraine should be ruled by the real Ukrainian patriots. His slogan 'Ukraine for the Ukrainians' is attractive to many citizens, especially in Western Ukraine. This could be dangerous for the cabinet since we've already lost considerable support in the East."
+ukraine.7.d:0 "Dmitri Dontsov, an ideologist of Ukrainian nationalism has been deported from Galicia, where he had urged the Ukrainians to fight against the pro-Polish government. Now he claims that the crisis exposed the weakness of our government and that's why Ukraine should be ruled by the real Ukrainian patriots. His slogan 'Ukraine for the Ukrainians' is attractive to many citizens, especially in Western Ukraine. This could be dangerous for the cabinet since we've already lost considerable support in the East."
 ukraine.7.a:0 "Em...Welcome home..."
 ukraine.8.t:0 "Khrushchev Criticises the Ukrainian government."
 ukraine.8.d:0 "Nikita Khrushchev, a prominent Ukrainian social-democrat, has opened the 3rd Congress of the Ukrainian Syndicalist Party. He demands that the government uses extreme measures to defend the workers and peasants from poverty. To further this he has proposed a new programme of social reforms, which should help Ukraine overcome this crisis. He is going to present his plan in the Rada."
@@ -150,7 +150,7 @@ ukraine.11.d:0 "Nikita Khrushchev has headed the government during the strongest
 ukraine.11.a:0 "Make Russian the second official state language."
 ukraine.11.b:0 "Arrest the pro-Russian leaders."
 ukraine.12.t:0 "National-Syndicalists Protest!"
-ukraine.12.d:0 "Notable Ukrainian National-Syndicalists Vlas Chubar and Alexander Shumsky oppose Khrushchev`s decision to allow the usage of the Russian language in the state institutions. They claim that this decision won`t unify our country and that free usage of the Russian language will lead to the growth of the separatist organisations in the Southern and Eastern Ukrainian regions."
+ukraine.12.d:0 "Notable Ukrainian National-Syndicalists Vlas Chubar and Alexander Shumsky oppose Khrushchev's decision to allow the usage of the Russian language in the state institutions. They claim that this decision won't unify our country and that free usage of the Russian language will lead to the growth of the separatist organisations in the Southern and Eastern Ukrainian regions."
 ukraine.12.a:0 "Millions of our workers don't think so."
 ukraine.12.b:0 "All right, all right. Restore the status quo"
 ukraine.13.t:0 "Pro-Russian Leaders Stir Up Trouble"
@@ -158,7 +158,7 @@ ukraine.13.d:0 "Unfortunately leaders of the different pro-Russian movements esc
 ukraine.13.a:0 "Another problem!"
 ukraine.14.t:0 "Profits From Increased Taxation on the Kulaks"
 ukraine.14.d:0 "Our decision to raise taxes on the 'Kulaks' and to spend this money on the poorest peasants led to stabilisation of our agriculture. 60-70% of the state and private farms are now self-supporting. As a result we can solve other, more difficult problems in our economy, because we have support in the villages and farms."
-ukraine.14.a:0 "That`s great."
+ukraine.14.a:0 "That's great."
 ukraine.15.t:0 "Another Crisis!"
 ukraine.15.d:0 "Our government's decision to divide the property of the Kulaks has led to a second crisis among the farmers. Our collectivisation ended in a total failure, the situation in Ukraine is even worse than before!"
 ukraine.15.a:0 "Syndicalism doesn't always work"
