Expanded the in game FAQ a lot

--- a/localisation/KR_April_l_english.yml
+++ b/localisation/KR_April_l_english.yml
@@ -12,8 +12,8 @@ april.1.e:0 "Oh no!"
 
 april.2.t:0 "A New Threat"
 april.2.d:0 "Following the establishment of the Great Old Modders a new, similar, phenomenon happened in Korea. This second landing unleashed new 'Modders' and various new species previously unknown to us. They claim to be from the same universe as this 'empire' and that their mission is to bring it down for the good of humanity.\nThey soon also occupied the neighbouring provinces and are now expanding in order to chase their supposed enemies. Our high command is confused over their identity, are they with us or against us?"
-april.2.a:0 "Damned rebels (Play the Empire)!"
-april.2.b:0 "Actually, those guys seem cooler (Play the Rebels)"
+april.2.a:0 "Damned rebels! (Play the Empire)"
+april.2.b:0 "Actually, those guys seem cooler! (Play the Rebels)"
 
 april.3.t:0 "The Ever-growing Threat"
 april.3.d:0 "Everywhere we go, new enemies start to mass on our borders, they seem endless in number. Our only choice is a preemptive strike, they would not hesitate, so why should we?."
