Hopefully a less ugly (allowing the lack of localisation) tree

--- a/localisation/KR_Ethiopia_l_english.yml
+++ b/localisation/KR_Ethiopia_l_english.yml
@@ -23,6 +23,7 @@ ETH_Reform_Navy_desc:0 "Our hasty construction of a navy has jeopardised and org
 ### Opinion Modifiers ###
 GER_railway_run:0 "Running the Railways"
 GER_railway_sold:0 "Sold the Railways"
+ETH_JAP_C:0 "Japanese Companies in Ethiopia"
 
 ### Foci ###
 ETH_reform:0 "The Reforms!"
