--- a/localisation/KR_Political_l_english.yml
+++ b/localisation/KR_Political_l_english.yml
@@ -29,13 +29,13 @@ very_high_popularity_desc:0 "You'll get this if your party is above 80% populari
 popularity:0 "Popularity"
 
 ### Economic Health ###
-boom_economy:0 "Boom Economy"
-good_economy:0 "Good Economy"
-medium_economy:0 "Medium Economy"
-bad_economy:0 "Bad Economy"
-bust_economy:0 "Bust Economy"
-crash_economy:0 "Crash Economy"
-economic_health:0 "Economic Health"
+boom_economy:0 "Boom Economy WIP!!!"
+good_economy:0 "Good Economy WIP!!!"
+medium_economy:0 "Medium Economy WIP!!!"
+bad_economy:0 "Bad Economy WIP!!!"
+bust_economy:0 "Bust Economy WIP!!!"
+crash_economy:0 "Crash Economy WIP!!!"
+economic_health:0 "Economic Health WIP!!!"
 
 ### Stability Effect ###
 EFFECT_CHANGE_LAW_stability:0 "Change our country's stability to '$NAME|Y$' which grants ($DESC$)."
@@ -70,12 +70,12 @@ kr.political.7.d:0 "With our Political Power recovered, we managed to somewhat s
 kr.political.7.a:0 "Very good."
 
 kr.political.8.t:0 "Increase in Stability"
-kr.political.8.d:0 "With our Political Power recovered, we finally got out of the bad situation we got us in. Hopefully it won't happen again."
+kr.political.8.d:0 "With our Political Power recovered, we finally got out of the bad situation we were in. Hopefully it won't happen again."
 kr.political.8.a:0 "The [Root.GetAdjective] nation is strong."
 
 kr.political.9.t:0 "Potential Increase in Stability"
 kr.political.9.d:0 "With our Political Power gains we now have the chance to improve our stability. \n\nTo get to a higher than average stability level you'll have to take the corresponding law in the stability screen, it will cost 150PP to go one level higher and remember that you can still loose those bonuses after some time if your PP goes below zero. \nDon't worry this message won't fire again."
-kr.political.9.a:0 "Got it"
+kr.political.9.a:0 "Understood."
 
 #kr.political.10.t:0 "Potential Increase in Stability"
 #kr.political.10.d:0 "With our Political Power gains we have the chance to improve our stability even further. Shall we do it?"
@@ -157,8 +157,8 @@ kr.political.25.a:0 "Great job!"
 kr.political.25.b:0 "I don't even like this mod..."
 
 kr.political.27.t:0 "The Stability System"
-kr.political.27.d:0 "Kaiserreich for HOI4 introduces a new mechanic: The Stability system. Stability is present in the form of laws which you can see in your political screen next to the trade laws. These are influenced by your political power. Having under -50PP will make you a potential target to get at low stability, -250 will get you to very low stability and -500 will get you in a disaster; you want to avoid that, trust me. On the contrary you'll be able to go up to very low stability if you're above -500, to low stability if you're above -250 and to average stability if you're above -50. \n\nThe mechanic to go up to good and very good stability is a bit different, you must get 150PP and then select the corresponding law in the stability screen. You'll then eventually lose the positive stability levels if you happen to get under 0PP. \n\nPlease keep in mind that the events adding or removing your stability don't instantly fire and can take up to 45, 90, 110 or even 200 days to fire if you're lucky so you should try to get that PP up again as quickly as possible. Finally, if you happen to forget what you read here you'll be able to see the requirements for each level as tooltips if you hover over the stability ideas in the law screen, but there is no reason that you would forget right?"
-kr.political.27.a:0 "Thanks for clicking, now that PP is for us!"
+kr.political.27.d:0 "Kaiserreich for HOI4 introduces a new mechanic: The Stability System. Stability is present in the form of laws which you can see in your political screen next to the trade laws. These are influenced by your political power. Having under -50PP will cause you to go down to low stability, under -250 and you'll go to very low stability and under -500 and you will be in a disaster; you want to avoid that, trust me. On the contrary you'll be able to go up to very low stability if you're above -500, to low stability if you're above -250 and to average stability if you're above -50. \n\nGoing up up to good and very good stability is a bit different, you must get 150PP and then select the corresponding law in the stability screen. You'll get a reminder the first time this is possible. If you ever go under 0PP you'll lose the positive stability levels. \n\nPlease keep in mind that the events adding or removing your stability don't instantly fire and can take several moths to fire. Finally, if you happen to forget what you read here you'll be able to see the requirements for each level as tooltips if you hover over the stability ideas in the law screen, but there is no reason that you would forget right?"
+kr.political.27.a:0 "I wanted that PP..."
 
 kr.political.33.t:0 "That's not very nice!"
 kr.political.33.d:0 "If you don't like Kaiserreich, why are you here?"
@@ -166,12 +166,12 @@ kr.political.33.a:0 "That is a very good question..."
 kr.political.33.b:0 "I liked it back on April 1st..."
 
 kr.political.34.t:0 "FAQ Part 1"
-kr.political.34.d:0 "Should I play with historical focus on or off?\nWhile it shouldn't make any difference, we recommend you play with it on as it may help avoid bugs in very rare cases.\n\nHow come I can't puppet anything?\nAll puppetting is now done via events or foci rather than through peace conferences.\n\nWhen will the next patch come out?\nWe aim for one big release every two months, and of course hot-fixes wherever needed.\n\nWhy are some of the models black?\nWe use some DLC assets in our mod, so if you don't have that DLC, you will get blank textures, don't worry though, they are just cosmetic errors. We are working on setting up backup textures to avoid this, so keep an eye out for updates.\n\nI want to do bug testing/art/music/coding for KR, where can I sign up?\nWonderful! Head to our discord, link on the forums, and message either Zankoas or Nijato.\n\nUpdate X broke my saves!\nThat isn't a question, but if you are having issues, try loading the save, saving again straight away without unpausing, then reloading using that new save. Not using ironman can also sometimes also help. If all else fails, remember past version are available for download on the KR4 forums."
-kr.political.34.a:0 "Go on..."
+kr.political.34.d:0 "Should I play with historical focus on or off?\nWhile it shouldn't make any difference, we recommend you play with it on as it may help avoid bugs in very rare cases.\n\nHow come I can't puppet anything?\nAll puppetting is now done via events or foci rather than through peace conferences.\n\nWhen will the next patch come out?\nWe aim for one big release every two months, and of course hot-fixes wherever needed.\n\nWhy are some of the models black?\nWe use some DLC assets in our mod, so if you don't have that DLC, you will get blank textures, don't worry though, they are just cosmetic errors. We are working on setting up backup textures to avoid this, so keep an eye out for updates.\n\nI want to do bug testing/art/music/coding for KR, where can I sign up?\nWonderful! Head to our discord, link on the forums, and message either Zankoas or Nijato.\n\nUpdate X broke my saves!\nThat isn't a question, but if you are having issues, try loading the save, saving again straight away without unpausing, then reloading using that new save. Not using ironman can also sometimes also help. If all else fails, remember past version are available for download on the KR4 forums.\n\nAre there any other parts to KR4?\nThe only other part is the music mod, which can be found in the steam workshop description or on the forums. You should definitely go get it."
+kr.political.34.a:0 "I will, I will."
 
 kr.political.35.t:0 "FAQ Part 2"
-kr.political.35.d:0 "Are there any known bugs I should be aware of?\nNote this isn't an exhaustive list of in game bugs, just once that we are aware of and haven't been able to fix.\n1. Puppets sometimes don't peace out from their masters wars when told to do so via events. No solution other than to use console  commands to force them to make peace.\n2. Very rarely, slight changes to mod files can cause all events to refire when loading a save. Making a new save or reverting back to the old version avoids this issue.\n\nI found a bug, how can I make by bug report as helpful as possible?\nReport it only once per patch, we are busy people so don't worry if it takes us a few days to answer. The paradox forums bug report thread, or the steam workshop bug report thread are the best places to report, but please only report it on one of them. Try and check the last few pages to see if someone else has reported it. The more detail the better; screen shots and saves are much appreciated. Also try and check back a few days after reporting, we might have asked a question about your bug or just want to thank you. And as always, we really appreciate you taking the time to make KR4 the best it can be!"
-kr.political.35.a:0 "What a lot of questions!"
+kr.political.35.d:0 "Is any DLC required?\nNo, while we will of course make use of DLC features, we won't make it a requirement to enjoy KR4.\n\nAre there any known bugs I should be aware of?\nNote this isn't an exhaustive list of in game bugs, just once that we are aware of and haven't been able to fix.\n1. Puppets sometimes don't peace out from their masters wars when told to do so via events. No solution other than to use console  commands to force them to make peace.\n2. Very rarely, slight changes to mod files can cause all events to refire when loading a save. Making a new save or reverting back to the old version avoids this issue.\n\nI found a bug, how can I make by bug report as helpful as possible?\nReport it only once per patch, we are busy people so don't worry if it takes us a few days to answer. The paradox forums bug report thread, or the steam workshop bug report thread are the best places to report, but please only report it on one of them. Try and check the last few pages to see if someone else has reported it. The more detail the better; screen shots and saves are much appreciated. Also try and check back a few days after reporting, we might have asked a question about your bug or just want to thank you. And as always, we really appreciate you taking the time to make KR4 the best it can be!"
+kr.political.35.a:0 "Did you have to take that PP away?"
 
 kr.political.28.t:0 "News Events"
 kr.political.28.d:0 "This is the president of the International News Tribune speaking. Kaiserreich is a mod deeply entrenched in lore and storytelling, conveyed through events, national foci and other means. However, as the player, you might not even realise this, because most of the happenings in foreign countries are unknown to your eyes. Therefore we have created a system of news events that tell you about the major events that happened recently in other countries. They contain titbits of lore to help you understand the meaning and reasons for the events of the world, and they are also pretty and stuff. \n\nHowever, you may be a game tester or have a serious addiction with this being your 1000th game this week, or just a player who doesn't want popups in your face all the time, so you also have the option to turn this feature off entirely or allow only the important news events to fire. It's your choice..."
