more updates for Delhi - almost done

--- a/localisation/KR_Dominion_of_India_l_english.yml
+++ b/localisation/KR_Dominion_of_India_l_english.yml
@@ -34,6 +34,8 @@ DEH_BHC_convert_faster:0 "Cores will be gained on the §Y[BHC.GetName]§!'s stat
 DEH_BHC_convert_slower:0 "Cores will be gained on the §Y[BHC.GetName]§!'s states more slowly\n"
 DEH_PRF_convert_faster:0 "Cores will be gained on the §Y[PRF.GetName]§!'s states more quickly\n"
 DEH_PRF_convert_slower:0 "Cores will be gained on the §Y[PRF.GetName]§!'s states more slowly\n"
+DEH_all_india_owned:0 "Owns all core states of the §Y[DEH.GetName]§!, §Y[PRF.GetName]§! and §Y[BHC.GetName]§!\n"
+DEH_all_india_cored:0 "All core states of the §Y[PRF.GetName]§! and §Y[BHC.GetName]§! are now core states of the §Y[DEH.GetName]§!\n"
 
 ### Ideas ###
 DEH_princely_power:0 "Power of the Princes"
@@ -187,6 +189,8 @@ DEH_industryreformact:0 "The Bombay Plan"
 DEH_industryreformact_desc:0 "A new proposal for industrial development has emerged in the Dominion Legislature. Called the Bombay Plan, this will have large effects on our economy."
 DEH_movies:0 "Indian Cinema: Propaganda Machine?"
 DEH_movies_desc:0 "The vibrant Indian cinema scene has the possibility to be a powerful tool of the state, and while movies are still mainly a toy of the rich, they have wide reaching social effects."
+DEH_unifyindia_2:0 "A New India Arises"
+DEH_unifyindia_2_desc:0 "All India is no longer divided into three parts and the Delhi government stands triumphant from the Khyber Pass to the Bay of Bengal. From Calcutta to Hyderabad the legitimacy of the Delhi government has been accepted by the many peoples, castes and religious groups of the Indian nation. Now it is time for India to march towards the future united and forever indivisible!"
 DEH_princely_officers:0 "Princely India's Officer Corps"
 DEH_princely_officers_desc:0 "The first order of business is dealing with the officers of the defeated Princely Federation. Do we give them a place in our nation? Or retire them before they can make further trouble?"
 DEH_PRFreform1:0 "Integrate the Former Bombay Presidency"
@@ -293,31 +297,6 @@ delhi.101.a:0 "To war! We must liberate the oppressed!"
 delhi.101.b:0 "Launch covert actions to take control of their government!"
 delhi.101.c:0 "Who cares?"
 
-delhi.102.t:0 "Bhutan"
-delhi.102.d:0 "The small mountain kingdom of Bhutan has resisted our sphere of influence for too long. Controlling valuable passes and river sources, we must either destroy it or ensure it is a loyal ally."
-delhi.102.a:0 "Destroy these hermits! To war!"
-delhi.102.b:0 "Let's ensure their government is loyal to us..."
-delhi.102.c:0 "Who cares about these people? They don't even have traffic lights!"
-
-delhi.103.t:0 "The Madras Rump State"
-delhi.103.d:0 "The small, isolated Tamil republic to the south is the last independent state in mainland India yet to be enlightened by our rule. What should we do?"
-delhi.103.a:0 "Destroy these separatists!"
-delhi.103.b:0 "Send them an ultimatum! Comply or else!"
-delhi.103.c:0 "Who cares about the Tamils? Lets go hunt some tigers!"
-
-delhi.104.t:0 "Madras Submits"
-delhi.104.d:0 "Bowing before our superior military might, the Madras Republic has submitted to our rule."
-delhi.104.a:0 "Excellent."
-
-delhi.105.t:0 "Madras Attacks!"
-delhi.105.d:0 "The Tamils have responded to our ultimatum with violence! We must destroy these upstarts!"
-delhi.105.a:0 "To war!"
-
-madras.0.t:0 "Delhi Sends an Ultimatum!"
-madras.0.d:0 "The Delhi government has sent us an ultimatum demanding we submit to their rule!"
-madras.0.a:0 "We have no choice but to submit..."
-madras.0.b:0 "We will defend our independence!"
-
 delhi.106.t:0 "Siam"
 delhi.106.d:0 "Siam still remains outside our sphere of influence. However, they are likely to be under heavy Japanese influence, which might bring Japan into a war."
 delhi.106.a:0 "Just attack them, Japanese be damned!"
@@ -356,7 +335,9 @@ delhi.155.a:0 "Fare thee well"
 delhi.156.t:0 "Passing of Sir Mian Fazl-i-Husain"
 delhi.156.d:0 "The architect of the gentry/peasant (kisan) political alliance that laid the groundwork for the powerful Unionist Party, Sir Mian Fazl-i-Husain has passed away after a prolonged period of illness. Having been absent from the day to day running of the party for a prolonged period of time owing to his illness, Fazl-i-Husain will never the less be sorely missed within conservative circles."
 delhi.156.a:0 "The Unionist Party soldiers on!"
-
+delhi.157.t:0 "Passing of Bhupinder Singh of Patiala"
+delhi.157.d:0 "The much beloved and progressive ruler of the princely state of Patiala in the Punjab, Maharaja Bhupinder Singh, passed away yesterday, surrounded by his family. A veteran of the Weltkrieg, Bhupinder Singh was a close friend and comrade of Ganga Singh of Bikaner. He is succeeded as maharaja by his eldest son, Yadavindra Singh."
+delhi.157.a:0 "What a tragic event!"
 delhi.160.t:0 "Canada Selling its Old Ships"
 delhi.160.d:0 "While many of the ships we've purchased from the British Navy are too old or in too poor a condition to serve as functioning war vessels, they can still add to our naval transport fleet...and we suspect there are a few ships that are still seaworthy yet. It's a good deal, and one which will help us dominate the Indian Ocean."
 delhi.160.a:0 "Let's see what we have..."
@@ -414,3 +395,42 @@ delhi.301.t:0 "The Fate of Socialist India's Officer Corps"
 delhi.301.d:0 "The Syndicalist threat on the subcontinent has been crushed under the caterpillar tracks of our armoured vehicles. However, some of the commanders who once owed their loyalty to the Calcutta government are willing to give up their political perversions in order to serve Mother India once more. The issue is a dangerous one, given the unforgiving hatred once shared between our two states, and many of our loyal officers deeply resent serving with former enemies."
 delhi.301.a:0 "Let the least politically tainted officers have a commission"
 delhi.301.b:0 "These men are beyond redemption, lock them away for ever!"
+delhi.302.t:0 "Integration in the Former Bombay Presidency"
+delhi.302.d:0 "We have brought about the complete collapse of the princely state and established control over the southern-most part of the sub-continent. Now, however, we must decide how to integrate the provinces previously ailing under feudal rule. Should we swiftly and harshly replace the apparatus of governance with our own or gradually implement societal changes, making transition easier for the local elites?"
+delhi.302.a:0 "Take a moderate approach to integration"
+delhi.302.b:0 "Commence integration immediately and harshly!"
+delhi.303.t:0 "Integration in the Deccan Princely States"
+delhi.303.d:0 "The southern princely states were always somewhat politically detached from the federal government in Hyderabad. This makes it harder for us to establish an efficient central administration. Never the less, that is what we will have to achieve."
+delhi.303.a:0 "Take a moderate approach to integration"
+delhi.303.b:0 "We must be firm with these southern princelings!"
+delhi.304.t:0 "Control Asserted in [new_core.GetName]"
+delhi.304.d:0 "While it has been difficult to wean the locals away from their serfdom and dependence on princely landlords, the state of [new_core.GetName] has been assimilated can finally be called a true part of [Root.GetNameDef]!"
+delhi.304.a:0 "It's about time!"
+delhi.305.t:0 "Resistance in [damage_state.GetName]!"
+delhi.305.d:0 "Protests in the formerly princely state of [damage_state.GetName] have grown increasingly violent as of late, spurred on by what we believe to be a reactionary resistance group operating out of remote regions in the hinterlands. Multiple terrorist bombings have accompanied the protests, and will likely continue until we fully assert control over [damage_state.GetName]'s people."
+delhi.305.a:0 "No doubt funded with princely wealth..."
+delhi.306.t:0 "The Massed Industries of the Bengal"
+delhi.306.d:0 "The Bengal was one of the most populous and prosperous of the Raj's many provinces. Heavily industrialized by Indian standards, the Bengal was also one of the first of Britain's Indian possessions to be heavily affected by socialist unrest. When the Raj collapsed, the Bengal proved a willing base of operations for Bose's campaign against Delhi and Hyderabad. In the ten years passing between the civil war and our conquest of the Calcutta Government, the massive industrial complexes of the Bengal have been expanded with help from the Union of Britain and a delicate bureaucracy of socialist administration put in place. Now these industrial behemoths lie in ruins after our troops swept through the province and different proposals have been presented as to how they can be brought back into shape. However, these industries proved a vital part in the social organization of the Bengal and a rapid restructure might harm our claim to legal rulership."
+delhi.306.a:0 "The free market shall eradicate Syndicalism in the Bengal!"
+delhi.306.b:0 "Initiate privatization, but guarantee workers' rights"
+delhi.306.c:0 "Keep these factories open and working for India!"
+delhi.307.t:0 "Assam's Nationalized Tea Plantations"
+delhi.307.d:0 "Some of the largest industries in all of India, the vast tea plantations of Assam have functioned as staggering state-owned entities until the downfall of Bolshevism in India. Now, the plantations are suffering under the strains of war and misadministration - resulting in poor production rates and massive dissatisfaction amongst the workers. It is our duty as a new legitimate government to address these issues and secure the support and loyalty of the workers in Assam - and maybe earn a little extra while doing so."
+delhi.307.a:0 "Sell the plantations to the highest (private) bidder!"
+delhi.307.b:0 "Initiate privatization, but guarantee workers' rights"
+delhi.307.c:0 "Maintain state control, we need that tea!"
+delhi.308.t:0 "The Princely Émigrés of Orissa"
+delhi.308.d:0 "One of the Eastern provinces seized by the rebels in Calcutta in the chaotic days of the Raj, Orissa was at the time of the Bolshevik conquest characterized by the large numbers of native princely states. Although these petty rulers never rivalled Hyderabad or Kashmir in power, the Calcutta government was quick to expropriate and prosecute the zamindars and rajas of the province. Quite a few of these royal émigrés sought refuge in Delhi, hoping one day to return to their estates and palaces. With the arrival of our troops in Orissa, that wish has now come true. However, a decade of socialist management has collectivized and divided a great deal of the émigrés' estates with huge amounts of peasants and workers depending on the land to survive. The reactionaries within our state crave vengeance and a forceful return to the way of the 'Ancien Regime' whilst the moderates counsel restraint and compromise."
+delhi.308.a:0 "Disperse the squatters! Return the land to the zamindars"
+delhi.308.b:0 "Allow the ryats to retain the land and pay off the princes"
+delhi.309.t:0 "Control Asserted in [new_core.GetName]"
+delhi.309.d:0 "While it has been difficult to wean the locals away from their socialist beliefs and their former reliance on collectivised industry and agriculture, the state of [new_core.GetName] can finally be called a true part of [Root.GetNameDef]!"
+delhi.309.a:0 "It's about time!"
+delhi.310.t:0 "Resistance in [damage_state.GetName]!"
+delhi.310.d:0 "Protests in the formerly-syndicalist state of [damage_state.GetName] have grown increasingly violent as of late, spurred on by what we believe to be a resistance group operating out of remote regions in the hinterlands. Multiple terrorist bombings have accompanied the protests, and will likely continue until we fully assert control over [damage_state.GetName]'s people."
+delhi.310.a:0 "Why can't they see reason?!"
+delhi.311.t:0 "Status of the Former French Colonies"
+delhi.311.d:0 "France had been the only major rival to Britain's colonial ambition on India and despite the latter's ultimate triumph, the French remained entrenched in several small enclaves. With the inclusion of the late Madras Republic's territory we now control the largest of these former French possessions, Pondicherry. It has been suggested that we restore some sort of autonomy to the city as a gesture of goodwill to our French allies, although this could be mistaken for tacit approval of foreign colonialism."
+delhi.311.a:0 "We can afford our French friends some special rights"
+delhi.311.b:0 "Merge the concessions into proper Indian states"
+delhi.311.c:0 "Ban all French institutions and enforce Indian values!"
