--- a/localisation/KR_Princely_Federation_l_english.yml
+++ b/localisation/KR_Princely_Federation_l_english.yml
@@ -478,12 +478,12 @@ prf.182.t:0 "Resistance in [damage_state.GetName]!"
 prf.182.d:0 "Protests in the formerly British-puppet state of [damage_state.GetName] have grown increasingly violent as of late, spurred on by what we believe to be a democratic resistance group operating out of remote regions in the territory. Multiple terrorist bombings have accompanied the protests, and will likely continue until we fully assert control over [damage_state.GetName]'s people."
 prf.182.a:0 "This is what they call 'freedom'?!"
 prf.183.t:0 "Dealing With Bhutan"
-prf.183.d:0 "In the aftermath of the Raj's collapse, the small and virtually isolated Kingdom of Bhutan utilised the chaotic situation in Northern Assam to seize several districts at the foothills of the Himalayas. With the Bharatiya Commune pacified and Assam integrated into our fair state many of the hawks within the cabinet are demanding the return of this unlawfully occupied territory. Some are even calling for the inclusion of Bhutan into a wider customs union combined with a military treaty."
+prf.183.d:0 "In the aftermath of the Raj's collapse, the small and virtually isolated Kingdom of Bhutan utilised the chaotic situation in Northern Assam to seize several districts at the foothills of the Himalayas. With the remainder of India finally united, many of the hawks within the cabinet are demanding the return of this unlawfully occupied territory. Some are even calling for the inclusion of Bhutan into a wider customs union combined with a military treaty."
 prf.183.a:0 "Demand the return of the occupied districts!"
 prf.183.b:0 "Claim the districts and press for a friendly government!"
 prf.184.t:0 "The Demands of [From.GetNameDef]"
-prf.184.d.return:0 "We are under pressure from the resurgent Indian government in Hyderabad to secede the districts we conquered in the aftermath of the British Raj's collapse."
-prf.184.d.govt:0 "We are under pressure from the resurgent Indian government in Delhi to secede the districts we conquered in the aftermath of the British Raj's collapse. Furthermore the Indians demand that we surrender our de facto independence."
+prf.184.d.return:0 "We are under pressure from [From.GetNameDef] to secede the districts we conquered in the aftermath of the British Raj's collapse."
+prf.184.d.govt:0 "We are under pressure from [From.GetNameDef] to secede the districts we conquered in the aftermath of the British Raj's collapse. Furthermore they demand we surrender our de facto independence."
 prf.184.a:0 "We have no choice but to comply"
 prf.184.b:0 "Tell them that mighty Bhutan shall defend her conquests!"
 prf.185.t:0 "Bhutan Submits"
@@ -495,12 +495,12 @@ prf.186.d:0 "Amazingly, the [From.GetAdjective] has refused our demand, saying t
 prf.186.a:0 "Then war it is!"
 prf.186.b:0 "Perhaps another time..."
 prf.187.t:0 "Dealing With Nepal"
-prf.187.d:0 "In the aftermath of the Raj's collapse, [NEP.GetNameDef] utilised the chaotic situation to seize several low-lying districts at the foothills of the Himalayas. With the Delhi government integrated into our fair state, many of the hawks within the cabinet are demanding the return of this unlawfully occupied territory. Some are even calling for the inclusion of Nepal into a wider customs union combined with a military treaty."
+prf.187.d:0 "In the aftermath of the Raj's collapse, [NEP.GetNameDef] utilised the chaotic situation to seize several low-lying districts at the foothills of the Himalayas. With all of India finally reunited, many of the hawks within the cabinet are demanding the return of this unlawfully occupied territory. Some are even calling for the inclusion of Nepal into a wider customs union combined with a military treaty."
 prf.187.a:0 "Demand the return of the occupied districts!"
 prf.187.b:0 "Claim the districts and press for a friendly government!"
 prf.188.t:0 "The Demands of [From.GetNameDef]"
-prf.188.d.return:0 "We are under pressure from the resurgent Indian government in Hyderabad to secede the districts we conquered in the aftermath of the British Raj's collapse."
-prf.188.d.govt:0 "We are under pressure from the resurgent Indian government in Delhi to secede the districts we conquered in the aftermath of the British Raj's collapse. Furthermore the Indians demand that we surrender our de facto independence."
+prf.188.d.return:0 "We are under pressure from the resurgent [From.GetAdjective] government to secede the districts we conquered in the aftermath of the British Raj's collapse."
+prf.188.d.govt:0 "We are under pressure from the resurgent [From.GetAdjective] government to secede the districts we conquered in the aftermath of the British Raj's collapse. Furthermore they demand that we surrender our de facto independence."
 prf.188.a:0 "We have no choice but to comply"
 prf.188.b:0 "Tell them that mighty Nepal shall defend her conquests!"
 prf.189.t:0 "Nepal Submits"
